Fix button spacing

--- a/Site/src/app/game/game.component.css
+++ b/Site/src/app/game/game.component.css
@@ -3,3 +3,6 @@
   border: solid black 1px;
   margin: 5px;
 }
+#exit-button {
+  margin-left: 20px;
+}
